fixed about spacing

--- a/components/home.module.css
+++ b/components/home.module.css
@@ -28,6 +28,10 @@ black #262626
   /* font-weight: 500; */
 }
 
+.list {
+  line-height: 1.6;
+}
+
 .description {
   /* line-height: 1.4; */
   /* font-size: 2.6rem; */
